# trading-notional-volume-calculator

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  TODO.md  animation.md  app.py  cli.py  config.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  trading_notional_calculator_prompt.md  trading_notional_calculator_spec.md
.github/workflows/: codeql.yml  lint.yml  snyk.yml
static/css/: style.css
templates/: base.html  export.html  help.html  index.html  results.html
uploads/: sample_ctrader.xlsx  sample_mt5.xlsx
utils/: calculator.py  fx_rates.py  report_generator.py
utils/parsers/: __init__.py  base.py  ctrader.py  mt5.py
